legacy_tests/fixtures/components/invalid-foldable/request.blade.php
@blaze(fold: true)

<div>
    Current URL: {{ request()->url() }}
</div>
